@@ -5,6 +5,7 @@ or someone is missing who should be listed there!
 
 Shaju Abraham
 Beregnyei Balazs
+Michael Banditt
 Krzysztof Blaszkowski
 Eugene Boldenkov
 Uwe Bonnes
@@ -14,6 +15,7 @@ Ian Campbell
 Jeff Carr
 Alex (d18c7db)
 Jerome Debard
+Kris Dickie
 Alexander Didebulidze
 Rainer Dörken
 Andrew Dyer
